feat : Add User Profile feature (#1849)

--- a/android/app/src/main/res/layout/activity_change_password.xml
+++ b/android/app/src/main/res/layout/activity_change_password.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinate_layout_user_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.fossasia.openevent.activities.auth.UserProfileActivity">
+    tools:context="org.fossasia.openevent.activities.auth.ChangePasswordActivity">
 
-    <include layout="@layout/content_user_profile" />
+    <include layout="@layout/content_change_password" />
 
 </android.support.design.widget.CoordinatorLayout>
