--- a/android/app/src/main/res/layout/activity_sign_up.xml
+++ b/android/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.fossasia.openevent.activities.SignUpActivity">
+    tools:context="org.fossasia.openevent.activities.auth.SignUpActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
