feat : Add auth option in generator (#1858)

--- a/apk-generator/v2/app/templates/index.html
+++ b/apk-generator/v2/app/templates/index.html
@@ -74,6 +74,10 @@
             </ul>
         </section>
 
+        <section id="auth-option-holder">
+            <input type="checkbox" name="is-auth-enabled" /> Enable User Authentication
+        </section>
+
         <label>App Theme Colors</label>
         <section id="app-theme-holder" class="row">
             <div class="col-md-12 col-lg-4" style="padding: 2px;">
