--- a/android/app/src/main/res/layout/content_user_profile.xml
+++ b/android/app/src/main/res/layout/content_user_profile.xml
@@ -31,7 +31,7 @@
                     android:layout_gravity="center_horizontal"
                     android:contentDescription="Avatar image view"
                     android:padding="@dimen/padding_large"
-                    android:src="@drawable/ic_account_circle_grey_24dp" />
+                    app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
