--- a/android/app/src/main/res/layout/content_edit_profile.xml
+++ b/android/app/src/main/res/layout/content_edit_profile.xml
@@ -3,6 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="@dimen/padding_large">
 
@@ -13,7 +14,7 @@
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/avatar"
         android:padding="@dimen/padding_large"
-        android:src="@drawable/ic_account_circle_grey_24dp" />
+        app:srcCompat="@drawable/ic_account_circle_grey_24dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/first_name"
@@ -43,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/last_name"
