--- a/android/app/src/main/res/layout/content_sign_up.xml
+++ b/android/app/src/main/res/layout/content_sign_up.xml
@@ -24,7 +24,7 @@
             android:paddingBottom="@dimen/padding_medium"
             android:paddingTop="@dimen/padding_medium">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/padding_medium">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/create_password"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/padding_large">
 
-            <android.support.v7.widget.AppCompatEditText
+            <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/confirm_password"
