fix : Statusbar and bookmark icon color issue (#1884)
*fix : Moved play button drawable to support API < 21
*fix : App crash because of ripple effect on API < 21
*refactor : Removed redundant code

--- a/android/app/src/main/res/layout/item_schedule.xml
+++ b/android/app/src/main/res/layout/item_schedule.xml
@@ -93,7 +93,7 @@
                 android:layout_below="@+id/slot_location"
                 android:ellipsize="marquee"
                 android:maxLines="1"
-                android:background="@drawable/button_ripple"
+                android:background="@drawable/track_tag_background"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_medium"
                 tools:text="Track" />
