--- a/android/app/src/main/res/layout/item_track.xml
+++ b/android/app/src/main/res/layout/item_track.xml
@@ -22,14 +22,34 @@
             android:layout_height="@dimen/item_image_view"
             android:contentDescription="@string/item_track" />
 
-        <TextView
-            android:id="@+id/track_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/primary_text"
-            android:textSize="@dimen/text_size_large"
-            android:layout_margin="@dimen/layout_margin_large"
-            tools:text="Track Title" />
+            android:layout_marginEnd="@dimen/layout_margin_large"
+            android:layout_marginLeft="@dimen/layout_margin_large"
+            android:layout_marginRight="@dimen/layout_margin_large"
+            android:layout_marginStart="@dimen/layout_margin_large"
+            android:gravity="center|start"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/track_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_extra_small"
+                android:textColor="@color/primary_text"
+                android:textSize="@dimen/text_size_extra_large"
+                tools:text="Track Title" />
+
+            <TextView
+                android:id="@+id/no_of_sessions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/track_rounded_corner"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_small"
+                tools:text="No of sessions" />
+        </LinearLayout>
     </LinearLayout>
 
     <View
