feat : Improve RecyclerView, ViewHolder and Adapter code base (#1891)
fix : Use DividerItemDecoration instead of view in xml
feat : Create HeaderViewHolder
fix : Made headers in Uppercase
fix : Remove redundant CompositeDisposable
fix : Remove change listeners to avoid memory leak
fix : Remove redundant root LinearLayout containing Linear Layout

--- a/android/app/src/main/res/layout/item_schedule.xml
+++ b/android/app/src/main/res/layout/item_schedule.xml
@@ -1,125 +1,109 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_frame"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/layout_margin_medium"
-    android:layout_marginStart="@dimen/layout_margin_medium"
-    android:layout_marginRight="@dimen/layout_margin_medium"
-    android:layout_marginEnd="@dimen/layout_margin_medium"
-    android:paddingLeft="@dimen/padding_large"
-    android:paddingStart="@dimen/padding_large"
-    android:paddingRight="@dimen/padding_large"
+    android:background="?attr/selectableItemBackground"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/padding_large"
     android:paddingEnd="@dimen/padding_large"
+    android:paddingLeft="@dimen/padding_large"
+    android:paddingRight="@dimen/padding_extra_large"
+    android:paddingStart="@dimen/padding_extra_large"
     android:paddingTop="@dimen/padding_medium">
 
-    <LinearLayout
-        android:id="@+id/ll_sessionDetails"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/slot_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:ellipsize="end"
+        android:paddingBottom="@dimen/padding_small"
+        android:paddingTop="@dimen/padding_small"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_extra_large"
+        tools:text="Slot Title" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/slot_title"
+            android:id="@+id/slot_start_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/text_size_medium"
+            tools:text="12:00" />
+
+        <TextView
+            android:id="@+id/slot_underscore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/slot_start_time"
+            android:layout_toRightOf="@+id/slot_start_time"
+            android:text="@string/time_separator" />
+
+        <TextView
+            android:id="@+id/slot_end_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/slot_underscore"
+            android:layout_toRightOf="@+id/slot_underscore"
+            android:textSize="@dimen/text_size_medium"
+            tools:text="1:00" />
+
+        <TextView
+            android:id="@+id/slot_comma"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/slot_end_time"
+            android:layout_toRightOf="@+id/slot_end_time"
+            android:text="@string/delimiter" />
+
+        <TextView
+            android:id="@+id/slot_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/slot_comma"
+            android:layout_toRightOf="@+id/slot_comma"
             android:ellipsize="end"
-            android:paddingBottom="@dimen/padding_small"
-            android:paddingTop="@dimen/padding_small"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_extra_large"
-            tools:text="Slot Title" />
+            android:maxLines="1"
+            android:textSize="@dimen/text_size_medium"
+            tools:text="Slot Location" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/slot_track"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/track_tag_height"
+            android:layout_below="@+id/slot_location"
+            android:layout_marginTop="@dimen/layout_margin_medium"
+            android:background="@drawable/track_tag_background"
+            android:ellipsize="marquee"
+            android:gravity="center"
+            android:maxLines="1"
+            android:paddingEnd="@dimen/padding_medium"
+            android:paddingLeft="@dimen/padding_medium"
+            android:paddingRight="@dimen/padding_medium"
+            android:paddingStart="@dimen/padding_medium"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_medium"
+            android:textStyle="bold"
+            tools:text="Track" />
 
-            <TextView
-                android:id="@+id/slot_start_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/text_size_medium"
-                tools:text="12:00" />
+        <ImageButton
+            android:id="@+id/slot_bookmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="end"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/session_bookmark_status"
+            android:padding="@dimen/padding_small"
+            android:tint="@color/black"
+            app:srcCompat="@drawable/ic_bookmark_border_white_24dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/slot_underscore"
-                android:layout_toEndOf="@+id/slot_start_time"
-                android:layout_toRightOf="@+id/slot_start_time"
-                android:text="@string/time_separator" />
-
-            <TextView
-                android:id="@+id/slot_end_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/slot_underscore"
-                android:layout_toRightOf="@+id/slot_underscore"
-                android:textSize="@dimen/text_size_medium"
-                tools:text="1:00" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/slot_comma"
-                android:layout_toEndOf="@+id/slot_end_time"
-                android:layout_toRightOf="@+id/slot_end_time"
-                android:text="@string/delimiter" />
-
-            <TextView
-                android:id="@+id/slot_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/slot_comma"
-                android:layout_toRightOf="@+id/slot_comma"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textSize="@dimen/text_size_medium"
-                tools:text="Slot Location" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/track_tag_height"
-                android:id="@+id/slot_track"
-                android:textAllCaps="false"
-                android:gravity="center"
-                android:layout_marginTop="@dimen/layout_margin_medium"
-                android:paddingLeft="@dimen/padding_medium"
-                android:paddingRight="@dimen/padding_medium"
-                android:paddingStart="@dimen/padding_medium"
-                android:paddingEnd="@dimen/padding_medium"
-                android:textStyle="bold"
-                android:layout_below="@+id/slot_location"
-                android:ellipsize="marquee"
-                android:maxLines="1"
-                android:background="@drawable/track_tag_background"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_medium"
-                tools:text="Track" />
-
-            <ImageButton
-                android:id="@+id/slot_bookmark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:tint="@color/black"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="@string/session_bookmark_status"
-                android:padding="@dimen/padding_small"
-                app:srcCompat="@drawable/ic_bookmark_border_white_24dp" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/list_divider_height"
-        android:layout_marginTop="@dimen/layout_margin_medium"
-        android:background="?android:attr/listDivider"
-        android:layout_below="@id/ll_sessionDetails" />
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
