feat : Add menu-item for Ticket URL (#1943)

--- a/android/app/src/main/res/menu/menu_home.xml
+++ b/android/app/src/main/res/menu/menu_home.xml
@@ -11,6 +11,8 @@
         app:showAsAction="always" />
 
     <item
-        android:title="Copyright"
-        android:id="@+id/action_display_copyright_dialog"/>
+        android:id="@+id/action_ticket_home"
+        android:icon="@drawable/ic_ticket_white_24dp"
+        android:title="Get Tickets"
+        app:showAsAction="ifRoom" />
 </menu>
