fix:transition of speaker image

--- a/android/app/src/main/res/layout/item_speaker.xml
+++ b/android/app/src/main/res/layout/item_speaker.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:contentDescription="@null"
         android:scaleType="centerCrop"
+        android:transitionName="@string/transition_speaker_to_activity"
         tools:src="@drawable/ic_account_circle_grey_24dp" />
 
     <LinearLayout
