feat: Add menu item for displaying information in SpeakersCall object #1937 (#1938)

--- a/android/app/src/main/res/menu/menu_home.xml
+++ b/android/app/src/main/res/menu/menu_home.xml
@@ -15,4 +15,10 @@
         android:icon="@drawable/ic_ticket_white_24dp"
         android:title="@string/ticket"
         app:showAsAction="ifRoom" />
+    <item
+        android:title="Copyright"
+        android:id="@+id/action_display_copyright_dialog"/>
+    <item
+        android:title="Call For Speakers"
+        android:id="@+id/action_display_speakers_call_dialog"/>
 </menu>
