--- a/android/app/src/main/res/layout/speakers_call_dialog.xml
+++ b/android/app/src/main/res/layout/speakers_call_dialog.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/holder_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:background="@color/color_primary"
-        android:textColor="@color/card_title"
-        android:textSize="20sp" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
-        android:layout_marginLeft="5sp"
-        android:id="@+id/announcement"/>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="2dp">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="5sp"
-        android:layout_marginRight="5sp"
-        android:weightSum="2">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:id="@+id/from_date_textview" />
+            android:id="@+id/holder_textview"
+            style="@style/CardContent.Header"
+            tools:text="Header" />
+
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:id="@+id/announcement"
+            style="@style/CardContent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:id="@+id/to_date_textview" />
+            tools:text="Announcement" />
+
+        <LinearLayout
+            style="@style/CardContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/from_date_textview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                tools:text="From Date" />
+
+            <TextView
+                android:id="@+id/to_date_textview"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                tools:text="To Date" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</android.support.v7.widget.CardView>
