--- a/android/app/src/main/res/layout/item_schedule.xml
+++ b/android/app/src/main/res/layout/item_schedule.xml
@@ -13,16 +13,33 @@
     android:paddingStart="@dimen/padding_extra_large"
     android:paddingTop="@dimen/padding_medium">
 
-    <TextView
-        android:id="@+id/slot_title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:paddingBottom="@dimen/padding_small"
-        android:paddingTop="@dimen/padding_small"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size_extra_large"
-        tools:text="Slot Title" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/slot_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:paddingBottom="@dimen/padding_small"
+            android:paddingTop="@dimen/padding_small"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size_extra_large"
+            tools:text="Slot Title" />
+
+        <ImageButton
+            android:id="@+id/slot_bookmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/session_bookmark_status"
+            android:padding="@dimen/padding_small"
+            android:tint="@color/black"
+            app:srcCompat="@drawable/ic_bookmark_border_white_24dp" />
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -80,30 +97,15 @@
             android:background="@drawable/track_tag_background"
             android:ellipsize="marquee"
             android:gravity="center"
-            android:maxLines="1"
             android:paddingEnd="@dimen/padding_medium"
             android:paddingLeft="@dimen/padding_medium"
             android:paddingRight="@dimen/padding_medium"
             android:paddingStart="@dimen/padding_medium"
+            android:singleLine="true"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_medium"
             android:textStyle="bold"
             tools:text="Track" />
-
-        <ImageButton
-            android:id="@+id/slot_bookmark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="end"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@string/session_bookmark_status"
-            android:padding="@dimen/padding_small"
-            android:tint="@color/black"
-            app:srcCompat="@drawable/ic_bookmark_border_white_24dp" />
-
     </RelativeLayout>
 </LinearLayout>
